# SSSEngine

./: .clang-format  .clang-tidy  .clang-tidy.template.yaml  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  docs-generation.yml
cmake-debug/: .ninja_deps  .ninja_log  build.ninja
cmake-debug/src/: SSSEngine.exp
docs/: README.md
docs/internal/: Doxyfile_internal
docs/internal/html/: _application_8cpp.html  _application_8h.html  _application_8h.js  _application_8h_source.html  _attributes_8h.html  _attributes_8h_source.html  _audio_8h.html  _audio_8h.js  _audio_8h_source.html  _bits_8h.html  _bits_8h.js  _bits_8h_source.html  _button_state_8h.html  _button_state_8h_source.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _color_r_g_b_8h.html  _color_r_g_b_8h.js  _color_r_g_b_8h_source.html  _concepts_8h.html  _concepts_8h.js  _concepts_8h_source.html  _constants_8h.html  _constants_8h.js  _constants_8h_source.html  _debug_8h.html  _debug_8h_source.html  _default_buffer_8h.html  _default_buffer_8h_source.html  _device_8h.html  _device_8h_source.html  _directx12_8cpp.html  _exceptions_8h.html  _exceptions_8h.js  _exceptions_8h_source.html  _factory_8h.html  _factory_8h_source.html  _helper_macros_8h.html  _helper_macros_8h_source.html  (+228 more)
docs/internal/latex/: _application_8cpp.tex  _application_8h.tex  _application_8h_source.tex  _attributes_8h.tex  _attributes_8h_source.tex  _audio_8h.tex  _audio_8h_source.tex  _bits_8h.tex  _bits_8h_source.tex  _button_state_8h.tex  _button_state_8h_source.tex  _camera_8h_source.tex  _color_r_g_b_8h.tex  _color_r_g_b_8h_source.tex  _concepts_8h.tex  _concepts_8h_source.tex  _constants_8h.tex  _constants_8h_source.tex  _debug_8h.tex  _debug_8h_source.tex  _default_buffer_8h.tex  _default_buffer_8h_source.tex  _device_8h.tex  _device_8h_source.tex  _directx12_8cpp.tex  _exceptions_8h.tex  _exceptions_8h_source.tex  _factory_8h.tex  _factory_8h_source.tex  _helper_macros_8h.tex  _helper_macros_8h_source.tex  _input_8h.tex  _input_8h_source.tex  _intrinsics_8h.tex  _intrinsics_8h_source.tex  _keycodes_8h.tex  _keycodes_8h_source.tex  _library_8h.tex  _library_8h_source.tex  _logger_8h.tex  (+91 more)
docs/public/: Doxyfile_public
docs/public/html/: _camera_8h.html  _camera_8h_source.html  _mesh_8h.html  _mesh_8h_source.html  _transform_8h.html  _transform_8h.js  _transform_8h_source.html  _window_8h.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_s_s_s_engine_1_1_core_1_1_window-members.html  class_s_s_s_engine_1_1_core_1_1_window.html  classes.html  dir_16cbcacc8bf9df04721ff2123104ca9e.html  dir_70b3d33610baddaf025c7769599ce8ea.html  dir_70b3d33610baddaf025c7769599ce8ea.js  files.html  (+13 more)
engine/: CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/base/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt
engine/editor/: CMakeLists.txt
engine/editor/include/: Application.h
engine/editor/src/: Application.cpp
engine/editor/win32/: CMakeLists.txt  Win32Editor.cpp
engine/input/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/platform/win32/: CMakeLists.txt
engine/platform/win32/internal/: Win32Entry.h  Win32Utils.h  Win32Window.h
engine/platform/win32/src/: Win32Debug.cpp  Win32File.cpp  Win32Library.cpp  Win32Memory.cpp  Win32Timer.cpp  Win32Utils.cpp  Win32WindowHandle.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/directx12/: CMakeLists.txt
engine/renderer/directx12/internal/: DefaultBuffer.h  Device.h  Factory.h  RenderingContext.h  ShaderCompiler.h  UploadBuffer.h
engine/renderer/directx12/src/: Directx12.cpp  RenderingContext.cpp
engine/renderer/rhi/: CMakeLists.txt
engine/renderer/rhi/include/: ColorRGB.h  Renderer.h  SwapChainHandle.h  Vertex.h
engine/renderer/rhi/internal/: Constants.h
engine/renderer/rhi/shaders/: TestShader.hlsl
engine/renderer/rhi/src/: Renderer.cpp
include/XAudioRedist/: x3daudioRedist.h  xapobaseRedist.h  xaudio2Redist.h  xaudio2fxRedist.h
scripts/: CMakeLists.txt  generateClangTidy.py
src/: CMakeLists.txt  Win32.c  Win32.cpp  dxguids.cpp  ssspch.h
src/Audio/: CMakeLists.txt
src/Audio/include/: Audio.h
src/Common/: CMakeLists.txt
src/Common/include/: Application.h  Assertion.h  Attributes.h  Bits.h  Concepts.h  Debug.h  Exceptions.h  HelperMacros.h  Intrinsics.h  Platform.h  Types.h  Window.h
src/Common/src/: Application.cpp  Exceptions.cpp  Window.cpp
src/Gameobjects/include/: Camera.h  Mesh.h  Transform.h
src/Input/: CMakeLists.txt
src/Input/include/: ButtonState.h  Input.h  Keycodes.h
src/Logging/include/: Logger.h
src/Math/: CMakeLists.txt
src/Math/include/: Matrix.h  Rect.h  Vector.h
src/Platform/: CMakeLists.txt
src/Platform/Common/: CMakeLists.txt
src/Platform/Common/include/: Library.h  Platform.h  Timer.h  Window.h
src/Platform/Win32/: CMakeLists.txt
src/Platform/Win32/include/: Win32Utils.h  Win32Window.h
src/Platform/Win32/src/: Win32.cpp  Win32Audio.cpp  Win32Debug.cpp  Win32Input.cpp  Win32Library.cpp  Win32Timer.cpp  Win32Utils.cpp  Win32Window.cpp
src/Renderer/: CMakeLists.txt  Directx.cpp  Renderer.cpp
src/Renderer/Common/include/: ColorRGB.h  Constants.h  SwapChain.h  SwapChainHandle.h  Vertex.h
src/Renderer/Directx12/: CMakeLists.txt
src/Renderer/Directx12/include/: CommandQueue.h  DefaultBuffer.h  Device.h  Factory.h  GpuHeaps.h  Renderer.h  RenderingContext.h  ShaderCompiler.h  UploadBuffer.h
src/Renderer/Directx12/src/: CommandQueue.cpp  Device.cpp  Directx.cpp  Directx12.cpp  Renderer.cpp  RenderingContext.cpp
src/Renderer/Shaders/: TestShader.hlsl
src/Renderer/include/: Renderer.h
src/Renderer/src/: Renderer.cpp
src/Win32/include/: Win32Utils.h  Win32Window.h
src/Win32/src/: Win32Assertion.cpp  Win32Utils.cpp  Win32Window.cpp
src/Windows/include/: Win32Utils.h
src/Windows/src/: Win32Utils.cpp
test/: CMakeLists.txt  README.md  Test.cpp  test.h  test_main.cpp
test/Time/: CMakeLists.txt  Timer.test.cpp
test/math/: CMakeLists.txt  Matrix.test.cpp  Vector.test.cpp  matrix.cpp  vector.cpp
(+141 files in other folders)
